--- a/vsts/build-nuget.yml
+++ b/vsts/build-nuget.yml
@@ -32,6 +32,14 @@ jobs:
           vstsFeed: '/32c885bd-55c9-4aab-8e98-108975177a75'
 
       - task: PowerShell@2
+        displayName: 'Rename Packages'
+        name: RENAME_PKG
+        inputs:
+          targetType: 'inline'
+          script: |
+            $(Build.SourcesDirectory)/versionupdate.ps1 -update -suffix $env:FILE_DATE_$(BuildID)
+
+      - task: PowerShell@2
         displayName: 'Build Packages'
         name: BUILD_PKG
         inputs:
@@ -66,9 +74,6 @@ jobs:
     condition: succeeded()
     dependsOn:
       - Build_Packages
-#      - Windows_Tests
-#      - Linux_Tests
-### TODO: add these dependency if tests are more stable
 
     pool:
       vmImage: windows-2022
@@ -105,20 +110,6 @@ jobs:
             Write-Host "Package contents (renamed):"
             gci -Path $(Build.SourcesDirectory)/bin -Recurse -Force
 
-#TODO: fix this script to get partner secret from key vault and copy file (avoid update needed for key rotation)
-      # - task: AzureCLI@2
-      #   displayName: 'Copy nuget packages to Partner Release Pipeline Storage'
-      #   inputs:
-      #     azureSubscription: azuresdkpartnerdrops
-      #     scriptType: ps
-      #     scriptLocation: inlineScript
-      #     inlineScript: |
-      #       Write-Host "Copy release package to partner pipeline drops/azure-iot-sdk/net/pkgs_$(BUILD_PKG.NUGET_PKG_DATE)"
-      #       $env:AZCOPY_SPA_CLIENT_SECRET=get-AzKeyVaultSecret -VaultName azuresdkpartnerdrops-kv -Name azuresdkpartnerdrops-service-principal-key -AsPlainText
-      #       $env:AZCOPY_SPA_CLIENT_SECRET_APP=get-AzKeyVaultSecret -VaultName azuresdkpartnerdrops-kv -Name azuresdkpartnerdrops-application-id -AsPlainText
-      #       azcopy login --service-principal --application-id $env:AZCOPY_SPA_CLIENT_SECRET_APP
-      #       azcopy copy "$(Build.SourcesDirectory)/bin" "https://azuresdkpartnerdrops.blob.core.windows.net/drops/asz-ztp/net" --recursive
-
       - task: AzureFileCopy@2
         displayName: 'Copy nuget packages to Partner Release Pipeline Storage'
         inputs:
@@ -126,9 +117,5 @@ jobs:
           azureSubscription: asz-ztp-azuresdkpartnerdrops
           Destination: AzureBlob
           storage: azuresdkpartnerdrops
-          ContainerName: 'drops/asz-ztp/net'
+          ContainerName: 'drops/asz-ztp/dotnet'
 
-#      - task: AzureArtifacts.manifest-generator-task.manifest-generator-task.ManifestGeneratorTask@0
-#        displayName: 'SBOM Generation Task'
-#        inputs:
-#          BuildDropPath: '$(Build.SourcesDirectory)/bin/pkgs_$(BUILD_PKG.NUGET_PKG_DATE)'
