--- a/vsts/build-nuget.yml
+++ b/vsts/build-nuget.yml
@@ -37,6 +37,7 @@ jobs:
         inputs:
           targetType: 'inline'
           script: |
+            $env:FILE_DATE = get-date -f yyyy-MM-dd-hh-mm-ss.f
             $(Build.SourcesDirectory)/versionupdate.ps1 -update -suffix $env:FILE_DATE_$(Build.BuildID)
 
       - task: PowerShell@2
