--- a/vsts/build-test-nuget.yml
+++ b/vsts/build-test-nuget.yml
@@ -6,6 +6,10 @@ parameters:
   type: number
   # Reasonable target to avoid throttling and contention with several PRs running.
   default: 3
+- name: uploadToE4KFeed
+  displayName: Whether to upload nuget packages to E4K feed or not.
+  type: boolean
+  default: true
 
 resources:
   - repo: self
@@ -458,7 +462,7 @@ jobs:
     displayName: Upload Nuget Packages to E4K Feed
     timeoutInMinutes: 15
 
-    condition: and(succeeded(), eq(variables['UPLOAD_TO_E4K_FEED'], 'true'))
+    condition: and(succeeded(), eq(parameters.uploadToE4KFeed, 'true'))
     dependsOn:
       - Build_Packages
 
@@ -507,7 +511,7 @@ jobs:
           command: 'push'
           packagesToPush: '$(Build.SourcesDirectory)/bin/pkgs_$(NUGET_PACKGE_FOLDER)/*.nupkg'
           nuGetFeedType: 'external'
-          publishFeed: 'https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json'
+          feedPublish: 'https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json'
           versioningScheme: 'off'  
 
   ### Upload unisgned packages for partner signing and release pipeline ###
