--- a/vsts/build-test-nuget.yml
+++ b/vsts/build-test-nuget.yml
@@ -505,6 +505,7 @@ jobs:
         displayName: 'NuGet Push'
         inputs:
           command: 'push'
+          SourcePath: '$(Build.SourcesDirectory)/bin'
           packagesToPush: '$(Build.SourcesDirectory)/bin/pkgs_$(NUGET_PACKGE_FOLDER)/*.nupkg'
           nuGetFeedType: 'external'
           feedPublish: 'https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json'
