--- a/vsts/build-test-nuget.yml
+++ b/vsts/build-test-nuget.yml
@@ -502,7 +502,7 @@ jobs:
           nuGetServiceConnections: 'nugetServiceConnection-tmahmood'
 
       - script: |
-          nuget push '$(Build.SourcesDirectory)/bin/pkgs_$(NUGET_PACKGE_FOLDER)/*.nupkg' -src https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json -ApiKey hqehkiyqizzxuxdbvwnbehmkatl346kr5wndulu45rar77vxmkjq
+          nuget push $(Build.SourcesDirectory)/bin/pkgs_$(NUGET_PACKGE_FOLDER)/*.nupkg -src https://pkgs.dev.azure.com/e4k-sdk/SdkLite/_packaging/sdklite-previews/nuget/v3/index.json -ApiKey nuget token
         displayName: "Push"   
 
   ### Upload unisgned packages for partner signing and release pipeline ###
