--- a/nuget.config
+++ b/nuget.config
@@ -11,5 +11,6 @@
     <packageSources>
         <clear />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="Consumption" value="https://msazure.pkgs.visualstudio.com/One/_packaging/ASZ-OEM-1P-Consumption/nuget/v3/index.json" />
     </packageSources>
 </configuration>
