--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -379,11 +379,17 @@ jobs:
           inputs:
             script: 'choco install -y netfx-4.7.2-devpack'
 
-      - script: |
-          choco install -y squid
-
-        displayName: "Install Squid"
+      - task: Docker@1
+        displayName: "Start Test Proxy"
         condition: eq(variables.SHOULD_RUN, 'True')
+        inputs:
+          containerregistrytype: "Container Registry"
+          command: "Run an image"
+          azureContainerRegistry: aziotacr.azurecr.io
+          imageName: aziotacr.azurecr.io/aziotbld/testproxy
+          containerName: "testproxy-instance"
+          ports: "127.0.0.1:8888:8888"
+          restartPolicy: unlessStopped
 
       - powershell: ./vsts/start_tpm_windows.ps1
         displayName: "Start TPM Simulator"
@@ -424,7 +430,7 @@ jobs:
           E2E_IKEY: $(E2E-IKEY)
 
           # Environment variables for the DevOps pipeline
-          PROXY_SERVER_ADDRESS: 127.0.0.1:3128
+          PROXY_SERVER_ADDRESS: 127.0.0.1:8888
           TARGET_BRANCH: $(System.PullRequest.TargetBranch)
           FRAMEWORK: $(FRAMEWORK)
 
