--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -345,7 +345,8 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            & 'C:\Program Files\Docker\Docker\DockerCli.exe' -SwitchDaemon
+             dir C:\ProgramData\chocolatey -Depth 5
+            & 'DockerCli.exe' -SwitchDaemon
             Write-Host "Build.Reason: ${{ variables['Build.Reason'] }}"
             Write-Host "jobTimeoutInMinutes: ${{ parameters.jobTimeoutInMinutes }}"
             Write-Host "maxParallelJobs: ${{ parameters.maxParallelJobs }}"
