--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -345,7 +345,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
-             dir C:\ProgramData\chocolatey -Depth 5
+            dir 'C:\ProgramData\chocolatey' -Depth 5
             & 'DockerCli.exe' -SwitchDaemon
             Write-Host "Build.Reason: ${{ variables['Build.Reason'] }}"
             Write-Host "jobTimeoutInMinutes: ${{ parameters.jobTimeoutInMinutes }}"
