--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -345,6 +345,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
+            choco install docker-cli
             dir 'C:\ProgramData\chocolatey' -Depth 5
             & 'DockerCli.exe' -SwitchDaemon
             Write-Host "Build.Reason: ${{ variables['Build.Reason'] }}"
