--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -379,19 +379,10 @@ jobs:
           inputs:
             script: 'choco install -y netfx-4.7.2-devpack'
 
-      - task: Docker@2
-        displayName: "Login to ACR"
-        condition: eq(variables.SHOULD_RUN, 'True')
-        inputs:
-          command: "login"
-          containerRegistry: "Azure IoT ACR"
-      - task: Docker@2
-        condition: eq(variables.SHOULD_RUN, 'True')
-        displayName: "Start Test Proxy"
-        inputs:
-          containerRegistry: 'Azure IoT ACR'
-          command: 'start'
-          container: 'testproxy-instance'
+      - script: |
+          choco install -y squid
+
+        displayName: "Install Squid"
 
       - powershell: ./vsts/start_tpm_windows.ps1
         displayName: "Start TPM Simulator"
