--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -385,13 +385,13 @@ jobs:
         displayName: "Install Squid"
 
       - script: |
-          cd c:/
+          cd D:/
           dir
           cd Squid
           dir
           cd bin
           dir
-          c:/Squid/bin/squid.exe
+          D:/Squid/bin/squid.exe
 
         displayName: "Run Squid"
 
