--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -337,7 +337,7 @@ jobs:
           SHOULD_RUN: ${{ eq(variables['testNet472'], 'True') }}
     pool:
       # If this is changed, don't forget to update supported_platforms.md in the root directory. That document outlines what OS we test on and should stay up to date.
-      vmImage: windows-2022
+      name: 'sdk-net--win-vs2022'
     steps:
       - task: PowerShell@2
         displayName: 'Print vars'
@@ -377,7 +377,7 @@ jobs:
         - task: CmdLine@2
           displayName: 'Install .NET 4.7.2'
           inputs:
-            script: 'choco install netfx-4.7.2-devpack'
+            script: 'choco install -y netfx-4.7.2-devpack'
 
       - script: |
           choco install -y squid
