--- a/iothub/service/samples/getting started/ServiceClientSample/ServiceClientSample.csproj
+++ b/iothub/service/samples/getting started/ServiceClientSample/ServiceClientSample.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
