--- a/iothub/service/samples/getting started/FileUploadNotificationReceiverSample/FileUploadNotificationReceiverSample.csproj
+++ b/iothub/service/samples/getting started/FileUploadNotificationReceiverSample/FileUploadNotificationReceiverSample.csproj
@@ -8,7 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="System.Text.Json" Version="6.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.11" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
