--- a/iothub/service/samples/solutions/PnpServiceSamples/TemperatureController/TemperatureController.csproj
+++ b/iothub/service/samples/solutions/PnpServiceSamples/TemperatureController/TemperatureController.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.11" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
