--- a/samples/helpers/ColorConsoleLogger/ColorConsoleLogger.csproj
+++ b/samples/helpers/ColorConsoleLogger/ColorConsoleLogger.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="System.Text.Json" Version="6.0.11" />
   </ItemGroup>
 
 </Project>
