--- a/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
+++ b/provisioning/service/samples/getting started/EnrollmentGroupSample/EnrollmentGroupSample.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Devices.Provisioning.Service" Version="1.18.4" />
+	  <ProjectReference Include="..\..\..\src\Microsoft.Azure.Devices.Provisioning.Service.csproj" />
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
 
